[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Texture/AD_VisualInventory_Borders/AD_VisualInventory_Border09.png" type="Texture" id=1]
[ext_resource path="res://Assets/Texture/PXUI-Basic/arrow_example.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Inventory/item-slot.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Texture/PXUI-Basic/checkbox_check_example.png" type="Texture" id=4]
[ext_resource path="res://Assets/Texture/PXUI-Basic/checkbox_example.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Inventory/Scripts/Inventory-script.gd" type="Script" id=6]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="Theme" id=2]
HScrollBar/styles/grabber = SubResource( 3 )
HScrollBar/styles/grabber_highlight = SubResource( 4 )
HScrollBar/styles/grabber_pressed = SubResource( 5 )
HScrollBar/styles/scroll = SubResource( 6 )
HScrollBar/styles/scroll_focus = SubResource( 7 )

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -455.0
margin_top = 48.0
margin_right = 455.0
margin_bottom = 227.0
mouse_filter = 1
texture = ExtResource( 1 )
region_rect = Rect2( 0, 1.7996, 254.947, 253.198 )
patch_margin_left = 25
patch_margin_top = 21
patch_margin_right = 24
patch_margin_bottom = 24

[node name="ScrollContainer" type="ScrollContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -427.0
margin_top = -75.0
margin_right = 427.0
margin_bottom = 75.0
theme = SubResource( 2 )
custom_styles/bg = SubResource( 1 )
scroll_vertical_enabled = false

[node name="GridContainer" type="GridContainer" parent="Background/ScrollContainer"]
margin_right = 850.0
margin_bottom = 150.0
size_flags_horizontal = 2
custom_constants/hseparation = 25
columns = 6

[node name="Slot1" parent="Background/ScrollContainer/GridContainer" groups=["slots"] instance=ExtResource( 3 )]
margin_right = 150.0
margin_bottom = 150.0

[node name="Slot2" parent="Background/ScrollContainer/GridContainer" groups=["slots"] instance=ExtResource( 3 )]
margin_left = 175.0
margin_right = 325.0
margin_bottom = 150.0

[node name="Slot3" parent="Background/ScrollContainer/GridContainer" groups=["slots"] instance=ExtResource( 3 )]
margin_left = 350.0
margin_right = 500.0
margin_bottom = 150.0

[node name="Slot4" parent="Background/ScrollContainer/GridContainer" groups=["slots"] instance=ExtResource( 3 )]
margin_left = 525.0
margin_right = 675.0
margin_bottom = 150.0

[node name="Slot5" parent="Background/ScrollContainer/GridContainer" groups=["slots"] instance=ExtResource( 3 )]
margin_left = 700.0
margin_right = 850.0
margin_bottom = 150.0

[node name="Next" type="TextureButton" parent="Background"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 37.0
margin_top = -20.0
margin_right = 77.0
margin_bottom = 20.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="Previous" type="TextureButton" parent="Background"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -20.0
margin_right = -38.0
margin_bottom = 20.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 3
flip_h = true

[node name="ToggleButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -202.0
margin_bottom = 202.0
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 6

[connection signal="pressed" from="Background/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Background/Previous" to="." method="_on_Previous_pressed"]
[connection signal="toggled" from="ToggleButton" to="." method="_on_ToggleButton_toggled"]
